--- a/product.css
+++ b/product.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/Product\ cover\ page.jpg');
+    background-image: url('images/Group\ Mac2.jpg');
     background-size: cover;
   }
 
