--- a/Checkout.css
+++ b/Checkout.css
@@ -1,6 +1,8 @@
 body{
-    background-image: url(images/Checkout.jpg);
-   background-size: contain;
+    background-image: url(images/chocolate\ mac.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
    
    
    
