--- a/style.css
+++ b/style.css
@@ -36,3 +36,29 @@ p {
 img[src='images/MacLogo.png'] {
  height: 70px;
 }
+
+
+.card {
+  margin: auto;
+  max-width: 500px;
+  border: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.card-header {
+  background-color: #fff;
+  border-bottom: none;
+  padding-bottom: 0;
+  text-align: center;
+  font-weight: bold;
+}
+.form-control:focus {
+  border-color: #007bff;
+  box-shadow: none;
+}
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+  padding: 10px 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
