--- a/ForgotPass.css
+++ b/ForgotPass.css
@@ -66,8 +66,52 @@ body {
     
   }
 
+
+
+  /*This is for my GIF*/
   .navbar-gif {
     height: 150px;
     
   }
+
+/*This is for my footer*/
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  .wrapper {
+    min-height: 100%;
+    margin-bottom: -60px;
+  }
+  
+  .site-footer {
+    height: 60px; 
+    background-color: #333;
+    padding: 20px;
+    text-align: center;
+    font-size: 16px;
+    color: #fff;
+    border-top: 1px solid #777;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .site-footer p {
+    margin: 0;
+  }
+  
+  .site-footer a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 10px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .site-footer a:hover {
+    color: #f0ad4e;
+  }
+  
   
