--- a/Checkout.css
+++ b/Checkout.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(images/chocolate\ mac.jpg);
+    background-image: url(images/GroupRight.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
@@ -12,6 +12,43 @@ body{
   img{
     height: 50px;
     width: 50px;
+  }
+  
+/*This is for my Footer*/
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  
+  
+  .site-footer {
+    height: 60px; 
+    background-color: #fffbfb;
+    padding: 20px;
+    text-align: center;
+    font-size: 16px;
+    color: #030303;
+    border-top: 1px solid #777;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .site-footer p {
+    margin: 0;
+  }
+  
+  .site-footer a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 10px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .site-footer a:hover {
+    color: #f0ad4e;
   }
   
   
