--- a/ForgotPass.css
+++ b/ForgotPass.css
@@ -87,11 +87,11 @@ body {
   
   .site-footer {
     height: 60px; 
-    background-color: #333;
+    background-color: #ffffff;
     padding: 20px;
     text-align: center;
     font-size: 16px;
-    color: #fff;
+    color: #000000;
     border-top: 1px solid #777;
     display: flex;
     justify-content: center;
