--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ html, body {
 
 
 /* Bulleted List*/
-.container {
+.containerfooter {
   background-color: #f2f2f2;
   padding: 20px;
   border: 1px solid #ccc;
