--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ html, body {
 /* Bulleted List*/
 .containerfooter {
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  display: inline-block;
 }
 
 .container h2 {
