--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ img[src='images/MacLogo.png'] {
   font-weight: bold;
 }
 
-.navbar-gif {
+.gif {
   height: 150px;
   display: block;
   margin: auto;
